--- a/src/JE.App/Pages/Movie/Detail/MovieDetail.razor
+++ b/src/JE.App/Pages/Movie/Detail/MovieDetail.razor
@@ -4,40 +4,38 @@
 
 @if (ViewModel.Movie != null)
 {
-    <div class="container">
-        <div class="row">
-            <div class="col-3">
-                <img class="img-fluid" src="@ViewModel.Movie.Poster">
+    <div class="row">
+        <div class="col-sm-12 col-md-3">
+            <img class="img-fluid" src="@ViewModel.Movie.Poster">
+        </div>
+        <div class="col-sm-12 col-md-9">
+            <div class="row">
+                <div class="col-sm-4 col-md-2 font-weight-bold">Title</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Title</div>
             </div>
-            <div class="col-9">
-                <div class="row">
-                    <div class="col-2 font-weight-bold">Title</div>
-                    <div class="col-10">@ViewModel.Movie.Title</div>
-                </div>
-                <div class="row">
-                    <div class="col-2 font-weight-bold">Year</div>
-                    <div class="col-10">@ViewModel.Movie.Year</div>
-                </div>
-                <div class="row">
-                    <div class="col-2 font-weight-bold">Rating</div>
-                    <div class="col-10">@ViewModel.Movie.Rated</div>
-                </div>
-                <div class="row">
-                    <div class="col-2 font-weight-bold">Runtime</div>
-                    <div class="col-10">@ViewModel.Movie.Runtime</div>
-                </div>
-                <div class="row">
-                    <div class="col-2 font-weight-bold">Country</div>
-                    <div class="col-10">@ViewModel.Movie.Country</div>
-                </div>
-                <div class="row">
-                    <div class="col-2 font-weight-bold">Rating</div>
-                    <div class="col-10">@ViewModel.Movie.ImdbRating</div>
-                </div>
-                <div class="row">
-                    <div class="col-2 font-weight-bold">Plot</div>
-                    <div class="col-10">@ViewModel.Movie.Plot</div>
-                </div>
+            <div class="row">
+                <div class="col-sm-4 col-md-2 font-weight-bold">Year</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Year</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-md-2 font-weight-bold">Rating</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Rated</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-md-2 font-weight-bold">Runtime</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Runtime</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-md-2 font-weight-bold">Country</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Country</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-md-2 font-weight-bold">Rating</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.ImdbRating</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-md-2 font-weight-bold">Plot</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Plot</div>
             </div>
         </div>
     </div>
