--- a/src/JE.App/Shared/MainLayout.razor
+++ b/src/JE.App/Shared/MainLayout.razor
@@ -2,6 +2,8 @@
 
 <div class="main">
     <div class="content px-4">
-        @Body
+        <div class="container">
+            @Body
+        </div>
     </div>
 </div>
