--- a/src/JE.App/Pages/Movie/Detail/MovieDetail.razor
+++ b/src/JE.App/Pages/Movie/Detail/MovieDetail.razor
@@ -4,7 +4,7 @@
 
 @if (ViewModel.Movie != null)
 {
-    <div class="row">
+    <div class="row shadow p-4">
         <div class="col-sm-12 col-md-3">
             <img class="img-fluid" src="@ViewModel.Movie.Poster">
         </div>
