--- a/src/JE.App/Pages/_Host.cshtml
+++ b/src/JE.App/Pages/_Host.cshtml
@@ -14,7 +14,8 @@
 </head>
 <body>
     <app>@(await Html.RenderComponentAsync<App>())</app>
-
+    
+    <script src="_content/Blazored.LocalStorage/blazored-localstorage.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
