Reorder properties of Movie Detail

--- a/src/JE.App/Pages/Movie/Detail/MovieDetail.razor
+++ b/src/JE.App/Pages/Movie/Detail/MovieDetail.razor
@@ -15,24 +15,24 @@
                 <div class="col-sm-8 col-md-10">@ViewModel.Movie.Title</div>
             </div>
             <div class="row">
+                <div class="col-sm-4 col-md-2 font-weight-bold">Rating</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.ImdbRating</div>
+            </div>
+            <div class="row">
                 <div class="col-sm-4 col-md-2 font-weight-bold">Year</div>
                 <div class="col-sm-8 col-md-10">@ViewModel.Movie.Year</div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 col-md-2 font-weight-bold">Rating</div>
-                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Rated</div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 col-md-2 font-weight-bold">Runtime</div>
-                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Runtime</div>
             </div>
             <div class="row">
                 <div class="col-sm-4 col-md-2 font-weight-bold">Country</div>
                 <div class="col-sm-8 col-md-10">@ViewModel.Movie.Country</div>
             </div>
             <div class="row">
-                <div class="col-sm-4 col-md-2 font-weight-bold">Rating</div>
-                <div class="col-sm-8 col-md-10">@ViewModel.Movie.ImdbRating</div>
+                <div class="col-sm-4 col-md-2 font-weight-bold">Runtime</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Runtime</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-md-2 font-weight-bold">Age</div>
+                <div class="col-sm-8 col-md-10">@ViewModel.Movie.Rated</div>
             </div>
             <div class="row">
                 <div class="col-sm-4 col-md-2 font-weight-bold">Plot</div>
