Fixed inspection results

--- a/src/JE.App/Pages/Movie/Detail/MovieDetail.razor
+++ b/src/JE.App/Pages/Movie/Detail/MovieDetail.razor
@@ -6,7 +6,7 @@
 {
     <div class="row shadow p-4">
         <div class="col-sm-12 col-md-3">
-            <img class="img-fluid" src="@ViewModel.Movie.Poster">
+            <img class="img-fluid" src="@ViewModel.Movie.Poster" alt="Movie Poster">
         </div>
         <div class="col-sm-12 col-md-9">
             <div class="row">
